Fixed text alignment on nav buttons, increased box shadow by 1px

--- a/css/styling.css
+++ b/css/styling.css
@@ -85,18 +85,18 @@ nav {
   color: #ffffff;
   padding: 5px 8px;
   margin:20px;
-  -moz-box-shadow: 0px 1px 0px 0px #424242;
-	-webkit-box-shadow: 0px 1px 0px 0px #424242;
-	box-shadow: 0px 1px 0px 0px #424242;
+  -moz-box-shadow: 0px 2px 0px 0px #424242;
+	-webkit-box-shadow: 0px 2px 0px 0px #424242;
+	box-shadow: 0px 2px 0px 0px #424242;
 
 }
 
 .navbutton:hover {
   background-color: #FFAB40;
   transition: all 0.15s ease 0s;
-  -moz-box-shadow: 0px 0px 3px 3px #424242;
-	-webkit-box-shadow: 0px 0px 3px 3px #424242;
-  box-shadow: 0px 0px 3px 3px #424242;
+  -moz-box-shadow: 0px 0px 4px 4px #424242;
+	-webkit-box-shadow: 0px 0px 4px 4px #424242;
+  box-shadow: 0px 0px 4px 4px #424242;
 }
 
 .navbutton:active {
@@ -107,7 +107,7 @@ nav {
 
 #aboutme:before {
   content: "";
-
+  font-size: 15px;
 }
 
 #aboutme:hover:before {
@@ -127,7 +127,7 @@ nav {
 
 #contact:before {
   content: "";
-
+  font-size: 15px;
 }
 
 #contact:hover:before {
@@ -156,7 +156,7 @@ nav {
   content: "My Skills";
   transition: all 0.3s;
   text-decoration: none;
-  margin-left: -12px;
+  margin-left: -8px;
   font-family: robotoThin;
   font-size: 15px;
 }
